// TODO message结构的属性名请使用 驼峰小写字母开始
// TODO enum枚举的属性名请使用 驼峰大写字母开始
syntax = "proto3";
option go_package = "/pb";
package pb;
import "common.proto";

// 进入游戏
// request route:game.player.enter
message C2SPlayerEnter {
}

// 进入游戏响应
// response route:game.player.enter
message S2CPlayerEnter {
  Player player = 1;//玩家基础信息
}

// GM
// request route:game.player.gm
message C2SPlayerGM{
  string cmd = 1;
  string args = 2;
}
// GM响应
// response route:game.player.gm
message S2CPlayerGM{
  bool result = 1;
}